--- a/IDCA.Client/View/StartWindow.xaml
+++ b/IDCA.Client/View/StartWindow.xaml
@@ -134,7 +134,7 @@
                     Margin="45, 20"
                     Cursor="Hand"
                     Command="{Binding ShowSettingWindowCommand}"
-                    Style="{StaticResource IDCA.Button.Setting}"/>
+                    Style="{StaticResource IDCA.Styles.Button.Setting}"/>
 
             <TextBlock Grid.Row="1">项目名称</TextBlock>
             <StackPanel Grid.Row="2" Orientation="Horizontal">
@@ -144,21 +144,21 @@
             <TextBlock Grid.Row="3">项目路径</TextBlock>
             <StackPanel Grid.Row="4" Orientation="Horizontal">
                 <TextBox Text="{Binding ProjectRootPath}"/>
-                <Button Style="{StaticResource IDCA.Window.DialogButton}" 
+                <Button Style="{StaticResource IDCA.Styles.Button.Dialog}" 
                         Command="{Binding SelectProjectPathCommand}"/>
             </StackPanel>
 
             <TextBlock Grid.Row="5">MDM文档路径</TextBlock>
             <StackPanel Grid.Row="6" Orientation="Horizontal">
                 <TextBox Text="{Binding MdmDocumentPath}"/>
-                <Button Style="{StaticResource IDCA.Window.DialogButton}" 
+                <Button Style="{StaticResource IDCA.Styles.Button.Dialog}" 
                         Command="{Binding SelectMdmDocumentPathCommand}"/>
             </StackPanel>
 
             <TextBlock Grid.Row="7">Excel配置文档路径（可选）</TextBlock>
             <StackPanel Grid.Row="8" Orientation="Horizontal">
                 <TextBox Text="{Binding ExcelSettingFilePath}"/>
-                <Button Style="{StaticResource IDCA.Window.DialogButton}" 
+                <Button Style="{StaticResource IDCA.Styles.Button.Dialog}" 
                         Command="{Binding SelectExcelSettingFilePathCommand}"/>
             </StackPanel>
             
