--- a/IDCA.Client/View/Style/Button.xaml
+++ b/IDCA.Client/View/Style/Button.xaml
@@ -1,31 +1,121 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                    xmlns:helper="clr-namespace:IDCA.Client.View.Helper"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Colors.xaml"/>
     </ResourceDictionary.MergedDictionaries>
+
+    <Style x:Key="IDCA.Style.Button.Base" TargetType="Button">
+        <Setter Property="Background" Value="{StaticResource IDCA.Brushes.Button.Background}"/>
+        <Setter Property="Foreground" Value="{StaticResource IDCA.Brushes.Foreground}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource IDCA.Brushes.BorderBrush}"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
+        <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Button}"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="MinHeight" Value="25"/>
+        <Setter Property="Padding" Value="5 6"/>
+        <Setter Property="SnapsToDevicePixels" Value="True"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border x:Name="Border"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            CornerRadius="{TemplateBinding helper:ControlsHelper.CornerRadius}"
+                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                        <ContentPresenter x:Name="PART_ContentPresenter"
+                                          Margin="{TemplateBinding BorderThickness}"
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                          Content="{TemplateBinding Content}"
+                                          ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                          ContentTemplate="{TemplateBinding ContentTemplate}"
+                                          ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}"
+                                          RecognizesAccessKey="{TemplateBinding helper:ControlsHelper.RecognizesAccessKey}"
+                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="Border" Property="BorderBrush" Value="{DynamicResource IDCA.Brushes.Accent}"/>
+                            <Setter TargetName="Border" Property="Background" Value="{DynamicResource IDCA.Brushes.Gray8}"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="Border" Property="Background" Value="{DynamicResource IDCA.Brushes.Gray7}"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="Border" Property="Opacity" Value="0.5"/>
+                            <Setter Property="Foreground" Value="{DynamicResource IDCA.Brushes.Control.Background.Disabled}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <ControlTemplate x:Key="IDCA.Templates.Button.Chromeless" TargetType="Button">
+        <Grid Background="{TemplateBinding Background}">
+            <ContentPresenter x:Name="PART_ContentPresenter"
+                              Margin="{TemplateBinding Padding}"
+                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                              VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                              RecognizesAccessKey="{TemplateBinding helper:ControlsHelper.RecognizesAccessKey}"
+                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+        </Grid>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter TargetName="PART_ContentPresenter" Property="Opacity" Value="1"/>
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="False">
+                <Setter TargetName="PART_ContentPresenter" Property="Opacity" Value="0.5" />
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground" Value="#ADADAD" />
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+
+    <Style x:Key="IDCA.Styles.Button.Chromeless" TargetType="Button">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Foreground" Value="{StaticResource IDCA.Brushes.Foreground}"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="0"/>
+        <Setter Property="Template" Value="{StaticResource IDCA.Templates.Button.Chromeless}"/>
+    </Style>
+
+    <Style x:Key="IDCA.Styles.Button.Accent.Base" TargetType="Button">
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="{DynamicResource IDCA.Brushes.Accent}"/>
+                <Setter Property="Foreground" Value="White"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
     
-    <Style x:Key="IDCA.Window.DialogButton" TargetType="Button">
+    <Style x:Key="IDCA.Styles.Button.Dialog" TargetType="Button" BasedOn="{StaticResource IDCA.Style.Button.Base}">
         <Setter Property="Height" Value="30"/>
         <Setter Property="Width" Value="30"/>
         <Setter Property="Margin" Value="5"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource IDCA.Brushes.Window.BorderBrush}"/>
-        <Setter Property="Background" Value="{DynamicResource IDCA.Brushes.Button.Background}"/>
         <Setter Property="VerticalContentAlignment" Value="Bottom"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="Content" Value="..."/>
     </Style>
-    <Style x:Key="IDCA.Button.Remove" TargetType="Button">
+    
+    <Style x:Key="IDCA.Styles.Button.Remove" TargetType="Button" BasedOn="{StaticResource IDCA.Styles.Button.Accent.Base}">
         <Setter Property="Width" Value="30"/>
         <Setter Property="Height" Value="30"/>
         <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Grid Background="#00000000">
+                    <Grid Background="{TemplateBinding Background}">
                         <icon:PackIconMaterial Kind="Close"
                                                Width="10"
                                                Height="10"
@@ -37,16 +127,18 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style x:Key="IDCA.Button.Add" TargetType="Button">
+    
+    <Style x:Key="IDCA.Styles.Button.Add" TargetType="Button" BasedOn="{StaticResource IDCA.Styles.Button.Accent.Base}">
         <Setter Property="Width" Value="30"/>
         <Setter Property="Height" Value="30"/>
         <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Grid Background="#00000000">
+                    <Grid Background="{TemplateBinding Background}">
                         <icon:PackIconMaterial Kind="Plus"
                                                Width="10"
                                                Height="10"
@@ -58,16 +150,18 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style x:Key="IDCA.Button.ArrowUp" TargetType="Button">
+    
+    <Style x:Key="IDCA.Styles.Button.ArrowUp" TargetType="Button" BasedOn="{StaticResource IDCA.Styles.Button.Accent.Base}">
         <Setter Property="Width" Value="30"/>
         <Setter Property="Height" Value="30"/>
         <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Grid Background="#00000000">
+                    <Grid Background="{TemplateBinding Background}">
                         <icon:PackIconMaterial Kind="ArrowUp"
                                                Width="10"
                                                Height="10"
@@ -79,16 +173,18 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style x:Key="IDCA.Button.ArrowDown" TargetType="Button">
+    
+    <Style x:Key="IDCA.Styles.Button.ArrowDown" TargetType="Button" BasedOn="{StaticResource IDCA.Styles.Button.Accent.Base}">
         <Setter Property="Width" Value="30"/>
         <Setter Property="Height" Value="30"/>
         <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Grid Background="#00000000">
+                    <Grid Background="{TemplateBinding Background}">
                         <icon:PackIconMaterial Kind="ArrowDown"
                                                Width="10"
                                                Height="10"
@@ -100,16 +196,18 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style x:Key="IDCA.Button.Close" TargetType="Button">
+    
+    <Style x:Key="IDCA.Styles.Button.Close" TargetType="Button" BasedOn="{StaticResource IDCA.Styles.Button.Accent.Base}">
         <Setter Property="Width" Value="30"/>
         <Setter Property="Height" Value="30"/>
         <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Grid Background="#00000000">
+                    <Grid Background="{TemplateBinding Background}">
                         <icon:PackIconMaterial Kind="Close"
                                                Width="10"
                                                Height="10"
@@ -121,26 +219,28 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style x:Key="IDCA.Button.Charactor" TargetType="Button">
+    
+    <Style x:Key="IDCA.Styles.Button.Charactor" TargetType="Button">
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Background" Value="#00000000"/>
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family.Button}"/>
     </Style>
-    <Style x:Key="IDCA.Button.Setting" TargetType="Button">
+    
+    <Style x:Key="IDCA.Styles.Button.Setting" TargetType="Button">
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Background" Value="#00000000"/>
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Grid Width="{TemplateBinding Width}"
                           Height="{TemplateBinding Height}"
-                          Background="#00000000">
+                          Background="{TemplateBinding Background}">
                         <icon:PackIconOcticons Kind="Gear"
                                                    Width="20"
                                                    Height="20"
@@ -151,4 +251,7 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style TargetType="Button" BasedOn="{StaticResource IDCA.Style.Button.Base}"/>
+
 </ResourceDictionary>
