--- a/IDCA.Client/View/Style/DataGrid.xaml
+++ b/IDCA.Client/View/Style/DataGrid.xaml
@@ -5,6 +5,16 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Colors.xaml"/>
     </ResourceDictionary.MergedDictionaries>
+
+    <Style x:Key="IDCA.Styles.TextBox.DataGrid.Editing" TargetType="TextBox">
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        <Setter Property="VerticalAlignment" Value="Stretch"/>
+        <Setter Property="Margin" Value="0"/>
+        <Setter Property="MinHeight" Value="0"/>
+        <Setter Property="Padding" Value="2 4"/>
+        <Setter Property="helper:ControlsHelper.CornerRadius" Value="0"/>
+    </Style>
     
     <Style x:Key="IDCA.Styles.DataGridColumnHeader" TargetType="DataGridColumnHeader">
         <Setter Property="Background" Value="{DynamicResource IDCA.Brushes.Background}"/>
@@ -127,8 +137,8 @@
         <Setter Property="GridLinesVisibility" Value="All"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="BorderBrush" Value="{StaticResource IDCA.Burshes.DataGrid.Separater}"/>
-        <Setter Property="VerticalGridLinesBrush" Value="{StaticResource IDCA.Burshes.DataGrid.Separater}"/>
-        <Setter Property="HorizontalGridLinesBrush" Value="{StaticResource IDCA.Burshes.DataGrid.Separater}"/>
+        <Setter Property="VerticalGridLinesBrush" Value="{StaticResource IDCA.Brushes.Gray7}"/>
+        <Setter Property="HorizontalGridLinesBrush" Value="{StaticResource IDCA.Brushes.Gray7}"/>
         <Setter Property="AutoGenerateColumns" Value="False"/>
         <Setter Property="CanUserAddRows" Value="True"/>
         <Setter Property="CanUserDeleteRows" Value="True"/>
