--- a/IDCA.Client/View/TableSettingView.xaml
+++ b/IDCA.Client/View/TableSettingView.xaml
@@ -2,7 +2,6 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:behavior="clr-namespace:IDCA.Client.View.Behavior"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
@@ -14,7 +13,7 @@
     <Grid>
 
         <Grid.Resources>
-            <Style x:Key="IDCA.TableSettingView.HeaderButton" TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
+            <Style x:Key="IDCA.TableSettingView.HeaderButton" TargetType="Button">
                 <Setter Property="Width" Value="100"/>
                 <Setter Property="Height" Value="30"/>
                 <Setter Property="Margin" Value="5"/>
@@ -38,7 +37,7 @@
                     <Setter Property="VerticalAlignment" Value="Center"/>
                     <Setter Property="Margin" Value="5"/>
                 </Style>
-                <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox}">
+                <Style TargetType="TextBox">
                     <Setter Property="Width" Value="120"/>
                     <Setter Property="Height" Value="30"/>
                     <Setter Property="Margin" Value="5"/>
@@ -83,14 +82,12 @@
 
         <DataGrid x:Name="MainDataGrid"
                   Grid.Row="1"
-                  Style="{StaticResource IDCA.DataGrid.Base}"
                   ItemsSource="{Binding ElementList}"
                   d:ItemsSource="{d:SampleData ItemCount=5}"
                   HeadersVisibility="All"
                   SelectionMode="Single"
                   SelectionUnit="CellOrRowHeader"
                   RowHeaderWidth="30"
-                  RowHeaderStyle="{StaticResource MahApps.Styles.DataGridRowHeader.Azure}"
                   behavior:DataGridDragDropRowBehavior.Enabled="True"
                   behavior:DataGridDragDropRowBehavior.PopupControl="{Binding ElementName=DataGridDragDrop}">
             <DataGrid.Resources>
