--- a/IDCA.Client/View/VariableSettingWindow.xaml
+++ b/IDCA.Client/View/VariableSettingWindow.xaml
@@ -20,14 +20,14 @@
             <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
-        <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox}">
+        <Style TargetType="TextBox">
             <Setter Property="Margin" Value="5"/>
             <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
             <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
         </Style>
-        <Style TargetType="ComboBox" BasedOn="{StaticResource MahApps.Styles.ComboBox}">
+        <Style TargetType="ComboBox">
             <Setter Property="Width" Value="60"/>
             <Setter Property="Height" Value="23"/>
             <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
@@ -35,7 +35,7 @@
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
         </Style>
-        <Style TargetType="CheckBox" BasedOn="{StaticResource MahApps.Styles.CheckBox}">
+        <Style TargetType="CheckBox">
             <Setter Property="Margin" Value="5"/>
             <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
             <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
@@ -48,7 +48,7 @@
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="Background" Value="{StaticResource IDCA.Brushes.Window.Background}"/>
         </Style>
-        <Style TargetType="DataGrid" BasedOn="{StaticResource IDCA.DataGrid.Base}">
+        <Style TargetType="DataGrid">
             <Setter Property="Margin" Value="10 5"/>
             <Setter Property="GridLinesVisibility" Value="Vertical"/>
             <Setter Property="ColumnHeaderStyle">
@@ -123,7 +123,7 @@
                 <TextBlock Grid.Column="0">属性配置</TextBlock>
                 <Button Grid.Column="1" 
                         HorizontalAlignment="Right"
-                        Style="{StaticResource IDCA.Button.Add}"
+                        Style="{StaticResource IDCA.Styles.Button.Add}"
                         Command="{Binding NewPropertyCommand}"/>
             </Grid>
 
@@ -136,7 +136,7 @@
                     <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Style="{StaticResource IDCA.Button.Close}"
+                                <Button Style="{StaticResource IDCA.Styles.Button.Close}"
                                         Command="{Binding RemoveCommand}"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
@@ -154,7 +154,7 @@
                 <TextBlock>下级变量</TextBlock>
                 <Button Grid.Column="1"
                         HorizontalAlignment="Right"
-                        Style="{StaticResource IDCA.Button.Add}"
+                        Style="{StaticResource IDCA.Styles.Button.Add}"
                         Command="{Binding NewFieldCommand}"/>
                 
             </Grid>
@@ -188,9 +188,9 @@
                                        FontFamily="{StaticResource IDCA.Font.Family}"
                                        VerticalAlignment="Center"
                                        Text="{Binding FieldTypeSelectedItem}"/>
-                            <Button Style="{StaticResource IDCA.Button.Add}"
+                            <Button Style="{StaticResource IDCA.Styles.Button.Add}"
                                     Command="{Binding NewFieldCommand}"/>
-                            <Button Style="{StaticResource IDCA.Button.Remove}"
+                            <Button Style="{StaticResource IDCA.Styles.Button.Remove}"
                                     Command="{Binding RemoveSelfCommand}"/>
                         </StackPanel>
                     </HierarchicalDataTemplate>
@@ -207,7 +207,7 @@
                 <TextBlock>下级变量属性配置</TextBlock>
                 <Button Grid.Column="1"
                         HorizontalAlignment="Right"
-                        Style="{StaticResource IDCA.Button.Add}"
+                        Style="{StaticResource IDCA.Styles.Button.Add}"
                         DataContext="{Binding SelectedField}"
                         Command="{Binding NewPropertyCommand}" Cursor="Hand"/>
 
@@ -224,7 +224,7 @@
                     <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Style="{StaticResource IDCA.Button.Close}"
+                                <Button Style="{StaticResource IDCA.Styles.Button.Close}"
                                         Command="{Binding RemoveCommand}"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
@@ -252,7 +252,7 @@
                 <TextBlock Grid.Column="0" FontSize="15">码号列表</TextBlock>
                 <Button Grid.Column="1"
                         HorizontalAlignment="Right"
-                        Style="{StaticResource IDCA.Button.Add}"
+                        Style="{StaticResource IDCA.Styles.Button.Add}"
                         Command="{Binding NewCategoricalCommand}">添加</Button>
             </Grid>
 
@@ -266,7 +266,7 @@
                     <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Style="{StaticResource IDCA.Button.Close}"
+                                <Button Style="{StaticResource IDCA.Styles.Button.Close}"
                                         Command="{Binding RemoveCommand}"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
@@ -323,7 +323,7 @@
                 <TextBlock Grid.Column="0" FontSize="15">下级变量码号列表</TextBlock>
                 <Button Grid.Column="1"
                         HorizontalAlignment="Right"
-                        Style="{StaticResource IDCA.Button.Add}"
+                        Style="{StaticResource IDCA.Styles.Button.Add}"
                         DataContext="{Binding SelectedField}"
                         Command="{Binding NewCategoricalCommand}" Cursor="Hand">添加</Button>
             </Grid>
@@ -339,7 +339,7 @@
                     <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Style="{StaticResource IDCA.Button.Close}"
+                                <Button Style="{StaticResource IDCA.Styles.Button.Close}"
                                         Command="{Binding RemoveCommand}"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
@@ -371,7 +371,7 @@
                 <TextBlock Grid.Column="0" FontSize="15">Category属性配置</TextBlock>
                 <Button Grid.Column="1"
                         HorizontalAlignment="Right"
-                        Style="{StaticResource IDCA.Button.Add}"
+                        Style="{StaticResource IDCA.Styles.Button.Add}"
                         DataContext="{Binding SelectedCategory}"
                         Command="{Binding NewPropertyCommand}" Cursor="Hand">添加</Button>
             </Grid>
@@ -385,7 +385,7 @@
                     <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Style="{StaticResource IDCA.Button.Close}"
+                                <Button Style="{StaticResource IDCA.Styles.Button.Close}"
                                         Command="{Binding RemoveCommand}"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
@@ -475,7 +475,7 @@
                 <TextBlock Grid.Column="0" FontSize="15">下级变量Category属性配置</TextBlock>
                 <Button Grid.Column="1"
                         HorizontalAlignment="Right"
-                        Style="{StaticResource IDCA.Button.Add}"
+                        Style="{StaticResource IDCA.Styles.Button.Add}"
                         DataContext="{Binding SelectedField.SelectedCategory}"
                         Command="{Binding NewPropertyCommand}" Cursor="Hand">添加</Button>
             </Grid>
@@ -489,7 +489,7 @@
                     <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Style="{StaticResource IDCA.Button.Close}"
+                                <Button Style="{StaticResource IDCA.Styles.Button.Close}"
                                         Command="{Binding RemoveCommand}"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
