--- a/IDCA.Client/View/AxisSettingWindow.xaml
+++ b/IDCA.Client/View/AxisSettingWindow.xaml
@@ -22,13 +22,8 @@
             <Style TargetType="TextBlock">
                 <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
             </Style>
-            <Style TargetType="CheckBox">
-                <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
-                <Setter Property="Height" Value="25"/>
-                <Setter Property="HorizontalAlignment" Value="Center"/>
-                <Setter Property="VerticalAlignment" Value="Center"/>
-                <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Style TargetType="CheckBox" BasedOn="{StaticResource IDCA.Styles.CheckBox}">
+                <Setter Property="Margin" Value="5"/>
             </Style>
             <Style TargetType="TextBox">
                 <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
@@ -91,21 +86,7 @@
                             <Setter Property="VerticalContentAlignment" Value="Center"/>
                             <Setter Property="Margin" Value="5"/>
                         </Style>
-                        <!--<Style TargetType="mah:MultiSelectionComboBox" BasedOn="{StaticResource MahApps.Styles.MultiSelectionComboBox.Horizontal}">
-                            <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                            <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
-                            <Setter Property="VerticalAlignment" Value="Center"/>
-                            <Setter Property="VerticalContentAlignment" Value="Center"/>
-                            <Setter Property="Margin" Value="5"/>
-                        </Style>-->
                         <Style TargetType="TextBox">
-                            <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                            <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
-                            <Setter Property="VerticalAlignment" Value="Center"/>
-                            <Setter Property="VerticalContentAlignment" Value="Center"/>
-                            <Setter Property="Margin" Value="5"/>
-                        </Style>
-                        <Style TargetType="CheckBox">
                             <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
                             <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
                             <Setter Property="VerticalAlignment" Value="Center"/>
