--- a/IDCA.Client/View/TableSettingWindow.xaml
+++ b/IDCA.Client/View/TableSettingWindow.xaml
@@ -48,7 +48,7 @@
             
             <StackPanel Grid.Column="0" Orientation="Horizontal">
                 <StackPanel.Resources>
-                    <Style TargetType="Button">
+                    <Style TargetType="Button" BasedOn="{StaticResource IDCA.Styles.Button.Accent.Base}">
                         <Setter Property="Margin" Value="5"/>
                         <Setter Property="Width" Value="60"/>
                         <Setter Property="Height" Value="20"/>
@@ -67,9 +67,7 @@
                         <Setter Property="VerticalAlignment" Value="Center"/>
                         <Setter Property="Margin" Value="15 5"/>
                     </Style>
-                    <Style TargetType="ComboBox">
-                        <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
-                        <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
+                    <Style TargetType="ComboBox" BasedOn="{StaticResource IDCA.Styles.ComboBox}">
                         <Setter Property="Margin" Value="5"/>
                         <Setter Property="Height" Value="25"/>
                         <Setter Property="Width" Value="100"/>
@@ -180,23 +178,17 @@
                     BorderThickness="0 0 1 0">
                 <TreeView BorderThickness="0"
                           FontSize="{StaticResource IDCA.Font.Size.Content}"
-                          Background="{Binding RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Path=Background}"
+                          Background="Transparent"
                           ItemsSource="{Binding Tree.Children}"
                           d:ItemsSource="{d:SampleData ItemCount=5}">
                     <TreeView.ItemContainerStyle>
                         <Style TargetType="TreeViewItem">
                             <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                            <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"/>
                         </Style>
                     </TreeView.ItemContainerStyle>
                     <TreeView.ItemTemplate>
                         <HierarchicalDataTemplate ItemsSource="{Binding Children}">
                             <Grid Height="25" Margin="0 3">
-                                <Grid.Resources>
-                                    <Style TargetType="Button">
-                                        <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"/>
-                                    </Style>
-                                </Grid.Resources>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="80"/>
                                     <ColumnDefinition Width="30"/>
