--- a/IDCA.Client/View/AxisSettingWindow.xaml
+++ b/IDCA.Client/View/AxisSettingWindow.xaml
@@ -1,19 +1,93 @@
 ﻿<Window
-        x:Class="IDCA.Client.View.AxisSettingWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
-        d:DataContext="{d:DesignInstance Type=viewmodel:AxisSettingViewModel}"
-        mc:Ignorable="d"
-        Height="800" 
-        Width="1200"
-        ResizeMode="NoResize"
-        Background="{StaticResource IDCA.Brushes.Window.Background}">
+    x:Class="IDCA.Client.View.AxisSettingWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
+    xmlns:selector="clr-namespace:IDCA.Client.View.Selector"
+    d:DataContext="{d:DesignInstance Type=viewmodel:AxisSettingViewModel}"
+    mc:Ignorable="d"
+    Height="800" 
+    Width="1200"
+    ResizeMode="NoResize"
+    Background="{StaticResource IDCA.Brushes.Window.Background}">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <DataTemplate x:Key="AxisElementDetailTextBoxTemplate" DataType="{x:Type viewmodel:AxisElementDetailViewModel}">
+            <StackPanel Orientation="Horizontal" Height="35">
+                <TextBlock Width="160"
+                           Margin="5"
+                           FontSize="{StaticResource IDCA.Font.Size.Content}"
+                           VerticalAlignment="Center"
+                           Text="{Binding Name}"/>
+                <TextBox Width="140"
+                         Margin="5"
+                         VerticalContentAlignment="Center"
+                         Text="{Binding Text}"
+                         IsReadOnly="{Binding IsReadOnly}"/>
+            </StackPanel>
+        </DataTemplate>
+        <DataTemplate x:Key="AxisElementDetailComboBoxTemplate" DataType="{x:Type viewmodel:AxisElementDetailViewModel}">
+            <StackPanel Orientation="Horizontal" Height="35">
+                <TextBlock Width="160"
+                           Margin="5"
+                           FontSize="{StaticResource IDCA.Font.Size.Content}"
+                           VerticalAlignment="Center"
+                           Text="{Binding Name}"/>
+                <ComboBox Width="140"
+                          Margin="5"
+                          HorizontalContentAlignment="Center"
+                          ItemsSource="{Binding Selections}"
+                          SelectedIndex="{Binding SelectedIndex}"
+                          IsReadOnly="{Binding IsReadOnly}"/>
+            </StackPanel>
+        </DataTemplate>
+        <selector:ComboBoxTextBoxDataTemplateSelector x:Key="AxisElementDetailSelector" 
+                                                      ComboBoxTemplate="{StaticResource AxisElementDetailComboBoxTemplate}"
+                                                      TextBoxTemplate="{StaticResource AxisElementDetailTextBoxTemplate}"/>
+
+        <DataTemplate x:Key="AxisElementSuffixTextBoxTemplate" DataType="{x:Type viewmodel:AxisElementSuffixViewModel}">
+            <StackPanel Margin="2" 
+                        Height="30"
+                        HorizontalAlignment="Left"
+                        Orientation="Horizontal">
+                <CheckBox Margin="3 5" 
+                          Width="200"
+                          VerticalAlignment="Center"
+                          FontSize="{StaticResource IDCA.Font.Size.Content}"
+                          IsChecked="{Binding Checked}"
+                          Content="{Binding Name}"
+                          Cursor="Hand"/>
+                    <TextBox Margin="2.5"
+                             Width="125"
+                             HorizontalAlignment="Stretch"
+                             Text="{Binding Text}"/>
+            </StackPanel>
+        </DataTemplate>
+        <DataTemplate x:Key="AxisElementSuffixComboBoxTemplate" DataType="{x:Type viewmodel:AxisElementSuffixViewModel}">
+            <StackPanel Margin="2" 
+                        Height="30"
+                        HorizontalAlignment="Left"
+                        Orientation="Horizontal">
+                <CheckBox Margin="3 5" 
+                          Width="200"
+                          VerticalAlignment="Center"
+                          IsChecked="{Binding Checked}"
+                          Content="{Binding Name}"
+                          Cursor="Hand"/>
+                <ComboBox Margin="2.5"
+                          Width="125"
+                          HorizontalAlignment="Stretch"
+                          HorizontalContentAlignment="Center"
+                          SelectedIndex="{Binding SelectedIndex}"
+                          ItemsSource="{Binding Selections}"/>
+            </StackPanel>
+        </DataTemplate>
+        <selector:ComboBoxTextBoxDataTemplateSelector x:Key="AxisElementSuffixSelector"
+                                                      ComboBoxTemplate="{StaticResource AxisElementSuffixComboBoxTemplate}"
+                                                      TextBoxTemplate="{StaticResource AxisElementSuffixTextBoxTemplate}"/>
     </Window.Resources>
     
     <Grid>
@@ -25,13 +99,9 @@
             <Style TargetType="CheckBox" BasedOn="{StaticResource IDCA.Styles.CheckBox}">
                 <Setter Property="Margin" Value="5"/>
             </Style>
-            <Style TargetType="TextBox">
-                <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
-                <Setter Property="Height" Value="25"/>
-                <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Style TargetType="TextBox" BasedOn="{StaticResource IDCA.Styles.TextBox}">
+                <Setter Property="Margin" Value="5"/>
                 <Setter Property="VerticalAlignment" Value="Center"/>
-                <Setter Property="VerticalContentAlignment" Value="Center"/>
             </Style>
         </Grid.Resources>
         
@@ -79,14 +149,7 @@
                             <Setter Property="VerticalAlignment" Value="Center"/>
                             <Setter Property="Margin" Value="5"/>
                         </Style>
-                        <Style TargetType="ComboBox">
-                            <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                            <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
-                            <Setter Property="VerticalAlignment" Value="Center"/>
-                            <Setter Property="VerticalContentAlignment" Value="Center"/>
-                            <Setter Property="Margin" Value="5"/>
-                        </Style>
-                        <Style TargetType="TextBox">
+                        <Style TargetType="ComboBox" BasedOn="{StaticResource IDCA.Styles.ComboBox}">
                             <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
                             <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
                             <Setter Property="VerticalAlignment" Value="Center"/>
@@ -334,39 +397,8 @@
                     <ItemsControl BorderThickness="0"
                                   Background="{Binding RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Path=Background}"
                                   ItemsSource="{Binding SelectedNode.Details}"
-                                  d:ItemsSource="{d:SampleData ItemCount=5}">
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Orientation="Horizontal" 
-                                            Height="30"
-                                            Margin="2">
-                                    <TextBlock Width="180"
-                                               Margin="5 2"
-                                               FontSize="{StaticResource IDCA.Font.Size.Content}"
-                                               VerticalAlignment="Center"
-                                               Text="{Binding Name}"/>
-                                    <Grid>
-                                        <TextBox Width="140"
-                                                 Height="25"
-                                                 VerticalContentAlignment="Center"
-                                                 Text="{Binding Text}"
-                                                 IsReadOnly="{Binding IsReadOnly}"
-                                                 Visibility="{Binding IsTextBox, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                                        <ComboBox Width="140"
-                                                  Height="25"
-                                                  FontSize="{StaticResource IDCA.Font.Size.Content}"
-                                                  FontFamily="{StaticResource IDCA.Font.Family}"
-                                                  HorizontalContentAlignment="Center"
-                                                  VerticalContentAlignment="Center"
-                                                  ItemsSource="{Binding Selections}"
-                                                  SelectedIndex="{Binding SelectedIndex}"
-                                                  IsReadOnly="{Binding IsReadOnly}"
-                                                  Visibility="{Binding IsComboBox, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                                    </Grid>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
+                                  d:ItemsSource="{d:SampleData ItemCount=5}"
+                                  ItemTemplateSelector="{StaticResource AxisElementDetailSelector}"/>
 
                 </ScrollViewer>
 
@@ -378,44 +410,11 @@
                            FontWeight="Bold"/>
 
                 <ScrollViewer Grid.Row="4" Margin="10" VerticalScrollBarVisibility="Auto">
-
                     <ItemsControl BorderThickness="0"
                                   ItemsSource="{Binding SelectedNode.Suffixes}"
-                                  d:ItemsSource="{d:SampleData ItemCount=10}">
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Margin="2" 
-                                            Height="30"
-                                            HorizontalAlignment="Left"
-                                            Orientation="Horizontal">
-                                    <CheckBox Margin="3 5" 
-                                              Width="200"
-                                              VerticalAlignment="Center"
-                                              FontSize="{StaticResource IDCA.Font.Size.Content}"
-                                              IsChecked="{Binding Checked}"
-                                              Content="{Binding Name}"
-                                              Cursor="Hand"/>
-                                    <Canvas Width="150"
-                                            Height="30"
-                                            VerticalAlignment="Center">
-                                        <ComboBox Width="140"
-                                                  Margin="2"
-                                                  FontSize="{StaticResource IDCA.Font.Size.Content}"
-                                                  FontFamily="{StaticResource IDCA.Font.Family}"
-                                                  HorizontalContentAlignment="Center"
-                                                  VerticalContentAlignment="Center"
-                                                  Visibility="{Binding IsComboBox, Converter={StaticResource BooleanToVisibilityConverter}}"
-                                                  SelectedIndex="{Binding SelectedIndex}"
-                                                  ItemsSource="{Binding Selections}"/>
-                                        <TextBox Width="140"
-                                                 Margin="2"
-                                                 Visibility="{Binding IsTextBox, Converter={StaticResource BooleanToVisibilityConverter}}"
-                                                 Text="{Binding Text}"/>
-                                    </Canvas>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
+                                  ItemTemplateSelector="{StaticResource AxisElementSuffixSelector}"
+                                  d:ItemsSource="{d:SampleData ItemCount=10}"
+                                  d:ItemTemplateSelector="{d:StaticResource AxisElementSuffixSelector}"/>
                 </ScrollViewer>
 
 
