--- a/IDCA.Client/View/AxisSettingWindow.xaml
+++ b/IDCA.Client/View/AxisSettingWindow.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
     xmlns:selector="clr-namespace:IDCA.Client.View.Selector"
@@ -16,7 +17,7 @@
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
         <DataTemplate x:Key="AxisElementDetailTextBoxTemplate" DataType="{x:Type viewmodel:AxisElementDetailViewModel}">
-            <StackPanel Orientation="Horizontal" Height="35">
+            <StackPanel Orientation="Horizontal" Height="40">
                 <TextBlock Width="160"
                            Margin="5"
                            FontSize="{StaticResource IDCA.Font.Size.Content}"
@@ -30,7 +31,7 @@
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="AxisElementDetailComboBoxTemplate" DataType="{x:Type viewmodel:AxisElementDetailViewModel}">
-            <StackPanel Orientation="Horizontal" Height="35">
+            <StackPanel Orientation="Horizontal" Height="40">
                 <TextBlock Width="160"
                            Margin="5"
                            FontSize="{StaticResource IDCA.Font.Size.Content}"
@@ -50,7 +51,7 @@
 
         <DataTemplate x:Key="AxisElementSuffixTextBoxTemplate" DataType="{x:Type viewmodel:AxisElementSuffixViewModel}">
             <StackPanel Margin="2" 
-                        Height="30"
+                        Height="40"
                         HorizontalAlignment="Left"
                         Orientation="Horizontal">
                 <CheckBox Margin="3 5" 
@@ -68,7 +69,7 @@
         </DataTemplate>
         <DataTemplate x:Key="AxisElementSuffixComboBoxTemplate" DataType="{x:Type viewmodel:AxisElementSuffixViewModel}">
             <StackPanel Margin="2" 
-                        Height="30"
+                        Height="40"
                         HorizontalAlignment="Left"
                         Orientation="Horizontal">
                 <CheckBox Margin="3 5" 
@@ -92,19 +93,6 @@
     
     <Grid>
 
-        <Grid.Resources>
-            <Style TargetType="TextBlock">
-                <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-            </Style>
-            <Style TargetType="CheckBox" BasedOn="{StaticResource IDCA.Styles.CheckBox}">
-                <Setter Property="Margin" Value="5"/>
-            </Style>
-            <Style TargetType="TextBox" BasedOn="{StaticResource IDCA.Styles.TextBox}">
-                <Setter Property="Margin" Value="5"/>
-                <Setter Property="VerticalAlignment" Value="Center"/>
-            </Style>
-        </Grid.Resources>
-        
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
             <RowDefinition Height="*"/>
@@ -141,22 +129,6 @@
                            VerticalAlignment="Top"/>
 
                 <Grid Grid.Row="1">
-
-                    <Grid.Resources>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
-                            <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                            <Setter Property="VerticalAlignment" Value="Center"/>
-                            <Setter Property="Margin" Value="5"/>
-                        </Style>
-                        <Style TargetType="ComboBox" BasedOn="{StaticResource IDCA.Styles.ComboBox}">
-                            <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                            <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
-                            <Setter Property="VerticalAlignment" Value="Center"/>
-                            <Setter Property="VerticalContentAlignment" Value="Center"/>
-                            <Setter Property="Margin" Value="5"/>
-                        </Style>
-                    </Grid.Resources>
                     
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -186,18 +158,21 @@
                               SelectedIndex="{Binding FactorSequenceSelectedIndex}"/>
 
                     <TextBlock Grid.Row="1" Grid.Column="0">Top/Bottom/NPS</TextBlock>
-                    <!--<mah:MultiSelectionComboBox Grid.Row="1"
+                    <mah:MultiSelectionComboBox Grid.Row="1"
                                                 Grid.Column="1"
                                                 BorderBrush="{x:Static SystemColors.ControlDarkBrush}"
-                                                mah:MultiSelectorHelper.SelectedItems="{Binding TopBottomBoxSelectedItems}"
+                                                Height="30"
+                                                IsEditable="True"
                                                 ItemsSource="{x:Static viewmodel:AxisSettingViewModel.TopBottomBoxSelections}"
+                                                mah:MultiSelectorHelper.SelectedItems="{Binding TopBottomBoxSelectedItems}"
+                                                Margin="5"
                                                 Separator=";"
                                                 ObjectToStringComparer="{mah:DefaultObjectToStringComparer}"
                                                 StringToObjectParser="{x:Static mah:DefaultStringToObjectParser.Instance}"
                                                 VerticalScrollBarVisibility="Disabled"
                                                 HorizontalScrollBarVisibility="Hidden"
                                                 ScrollViewer.CanContentScroll="True"
-                                                />-->
+                                                />
 
                     <TextBlock Grid.Row="1" Grid.Column="2">NPS Top Box</TextBlock>
                     <TextBox Grid.Row="1" Grid.Column="3" Text="{Binding NpsTopBox}"/>
@@ -306,13 +281,6 @@
                             <TreeView.ItemTemplate>
                                 <HierarchicalDataTemplate ItemsSource="{Binding Children}">
                                     <Grid Height="30">
-                                        <Grid.Resources>
-                                            <Style TargetType="Button">
-                                                <Setter Property="Cursor" Value="Hand"/>
-                                                <Setter Property="Width" Value="20"/>
-                                                <Setter Property="Height" Value="25"/>
-                                            </Style>
-                                        </Grid.Resources>
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition MinWidth="180" Width="*"/>
                                             <ColumnDefinition Width="120"/>
@@ -370,7 +338,7 @@
                          VerticalContentAlignment="Top"
                          FontFamily="{StaticResource IDCA.Font.Family}"
                          FontSize="{StaticResource IDCA.Font.Size.Content}"
-                         Background="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"
+                         Background="{StaticResource IDCA.Brushes.Window.Background}"
                          Text="{Binding AxisExpression}"
                          TextWrapping="Wrap"/>
 
@@ -395,7 +363,6 @@
 
                 <ScrollViewer Grid.Row="2" Margin="10" VerticalScrollBarVisibility="Auto">
                     <ItemsControl BorderThickness="0"
-                                  Background="{Binding RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Path=Background}"
                                   ItemsSource="{Binding SelectedNode.Details}"
                                   d:ItemsSource="{d:SampleData ItemCount=5}"
                                   ItemTemplateSelector="{StaticResource AxisElementDetailSelector}"/>
