--- a/IDCA.Client/View/Style/Button.xaml
+++ b/IDCA.Client/View/Style/Button.xaml
@@ -1,9 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:helper="clr-namespace:IDCA.Client.View.Helper"
                     xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="IDCA.Styles.Button.Accent.Base" TargetType="ButtonBase">
+    <Style x:Key="IDCA.Styles.Button.Accent.Base" TargetType="ButtonBase" BasedOn="{StaticResource MahApps.Styles.Button}">
         <Setter Property="FontWeight" Value="Normal"/>
         <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
         <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
@@ -12,9 +11,10 @@
         <Setter Property="Background" Value="{StaticResource IDCA.Brushes.Button.Background}"/>
         <Setter Property="Foreground" Value="{StaticResource IDCA.Brushes.Foreground}"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="0"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
-        <Setter Property="Template">
+        <!--<Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ButtonBase">
                     <Border x:Name="Border" 
@@ -34,8 +34,8 @@
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
-        </Setter>
-        <Style.Triggers>
+        </Setter>-->
+        <!--<Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="{StaticResource IDCA.Brushes.Button.Background.MouseOver}"/>
                 <Setter Property="BorderBrush" Value="{StaticResource IDCA.Brushes.Accent}"/>
@@ -47,7 +47,7 @@
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="Foreground" Value="{StaticResource IDCA.Brushes.Gray2}"/>
             </Trigger>
-        </Style.Triggers>
+        </Style.Triggers>-->
     </Style>
     
     <Style x:Key="IDCA.Styles.Button.Dialog" TargetType="Button" BasedOn="{StaticResource IDCA.Styles.Button.Accent.Base}">
