--- a/IDCA.Client/View/Style/CheckBox.xaml
+++ b/IDCA.Client/View/Style/CheckBox.xaml
@@ -1,8 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:helper="clr-namespace:IDCA.Client.View.Helper"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="IDCA.Styles.CheckBox" TargetType="CheckBox">
+    <Style x:Key="IDCA.Styles.CheckBox" TargetType="CheckBox" BasedOn="{StaticResource MahApps.Styles.CheckBox}">
         <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
         <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
         <Setter Property="Foreground" Value="{StaticResource IDCA.Brushes.Foreground}"/>
@@ -11,11 +10,12 @@
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="Padding" Value="6 0 0 0"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
-        <Setter Property="Template">
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Height" Value="30"/>
+        <!--<Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="CheckBox">
                     <Grid>
@@ -93,7 +93,7 @@
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
-        </Setter>
+        </Setter>-->
     </Style>
 
     <Style TargetType="CheckBox" BasedOn="{StaticResource IDCA.Styles.CheckBox}"/>
