--- a/IDCA.Client/View/Style/DataGrid.xaml
+++ b/IDCA.Client/View/Style/DataGrid.xaml
@@ -1,30 +1,34 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
-
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
-    
-    
-    <Style TargetType="DataGrid">
-        <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-        <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
-        <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
-        <Setter Property="HorizontalScrollBarVisibility" Value="Auto"/>
-        <Setter Property="GridLinesVisibility" Value="All"/>
+    <Style x:Key="IDCA.Styles.DataGrid.Base" TargetType="DataGrid" BasedOn="{StaticResource MahApps.Styles.DataGrid}">
+        <Setter Property="AllowDrop" Value="True"/>
+        <Setter Property="AutoGenerateColumns" Value="False"/>
         <Setter Property="Background" Value="{StaticResource IDCA.Brushes.Control.Background}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="BorderBrush" Value="{StaticResource IDCA.Brushes.BorderBrush}"/>
-        <Setter Property="VerticalGridLinesBrush" Value="{StaticResource IDCA.Brushes.Gray7}"/>
-        <Setter Property="HorizontalGridLinesBrush" Value="{StaticResource IDCA.Brushes.Gray7}"/>
-        <Setter Property="AutoGenerateColumns" Value="False"/>
         <Setter Property="CanUserAddRows" Value="True"/>
         <Setter Property="CanUserDeleteRows" Value="True"/>
         <Setter Property="CanUserReorderColumns" Value="False"/>
         <Setter Property="CanUserResizeColumns" Value="False"/>
         <Setter Property="CanUserResizeRows" Value="False"/>
         <Setter Property="CanUserSortColumns" Value="False"/>
-        <Setter Property="RowHeaderWidth" Value="20"/>
         <Setter Property="ColumnHeaderHeight" Value="35"/>
-        <Setter Property="AllowDrop" Value="True"/>
+        <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
+        <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
+        <Setter Property="Foreground" Value="{StaticResource IDCA.Brushes.Foreground}"/>
+        <Setter Property="GridLinesVisibility" Value="All"/>
+        <Setter Property="HorizontalGridLinesBrush" Value="{StaticResource IDCA.Brushes.Gray7}"/>
+        <Setter Property="HorizontalScrollBarVisibility" Value="Auto"/>
+        <Setter Property="RowHeaderWidth" Value="20"/>
+        <Setter Property="SelectionMode" Value="Single"/>
+        <Setter Property="SelectionUnit" Value="CellOrRowHeader"/>
+        <Setter Property="ScrollViewer.CanContentScroll" Value="True"/>
+        <Setter Property="VerticalGridLinesBrush" Value="{StaticResource IDCA.Brushes.Gray7}"/>
+        <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
         <Setter Property="VirtualizingPanel.IsVirtualizing" Value="True"/>
     </Style>
+
+    <Style TargetType="DataGrid" BasedOn="{StaticResource IDCA.Styles.DataGrid.Base}"/>
 
 </ResourceDictionary>
