--- a/IDCA.Client/View/TableSettingView.xaml
+++ b/IDCA.Client/View/TableSettingView.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="IDCA.Client.View.TableSettingView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:behavior="clr-namespace:IDCA.Client.View.Behavior"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
@@ -11,17 +11,6 @@
              d:DesignWidth="1400">
 
     <Grid>
-
-        <Grid.Resources>
-            <Style x:Key="IDCA.TableSettingView.HeaderButton" TargetType="Button">
-                <Setter Property="Width" Value="100"/>
-                <Setter Property="Height" Value="30"/>
-                <Setter Property="Margin" Value="5"/>
-                <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
-                <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                <Setter Property="Background" Value="{StaticResource IDCA.Brushes.Button.Background}"/>
-            </Style>
-        </Grid.Resources>
         
         <Grid.RowDefinitions>
             <RowDefinition Height="45"/>
@@ -30,31 +19,14 @@
 
         <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
 
-            <StackPanel.Resources>
-                <Style TargetType="TextBlock">
-                    <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                    <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.TextBlock.Label}"/>
-                    <Setter Property="VerticalAlignment" Value="Center"/>
-                    <Setter Property="Margin" Value="5"/>
-                </Style>
-                <Style TargetType="TextBox">
-                    <Setter Property="Width" Value="120"/>
-                    <Setter Property="Height" Value="30"/>
-                    <Setter Property="Margin" Value="5"/>
-                    <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                    <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
-                    <Setter Property="VerticalAlignment" Value="Center"/>
-                    <Setter Property="VerticalContentAlignment" Value="Center"/>
-                </Style>
-            </StackPanel.Resources>
-
             <TextBlock>文件名称</TextBlock>
-            <TextBox Text="{Binding TableName}" />
+            <TextBox Width="120" Height="30" Margin="5" Text="{Binding TableName}" />
             
             <TextBlock>出示表头</TextBlock>
-            <!--<mah:MultiSelectionComboBox Width="150" 
+            <mah:MultiSelectionComboBox Width="150" 
                                         Height="30" 
                                         Margin="5"
+                                        IsEditable="True"
                                         FontSize="{StaticResource IDCA.Font.Size.Content}"
                                         FontFamily="{StaticResource IDCA.Font.Family}"
                                         BorderBrush="{x:Static SystemColors.ControlDarkBrush}"
@@ -66,19 +38,11 @@
                                         ScrollViewer.CanContentScroll="True"
                                         VerticalScrollBarVisibility="Hidden"
                                         HorizontalScrollBarVisibility="Hidden"
-                                        Style="{StaticResource MahApps.Styles.MultiSelectionComboBox.Horizontal}"/>-->
+                                        Style="{StaticResource MahApps.Styles.MultiSelectionComboBox.Horizontal}"/>
 
-            <Button Style="{StaticResource IDCA.TableSettingView.HeaderButton}" Command="{Binding PushNewElementCommand}">添加表格</Button>
+            <Button Height="30" Width="100" Command="{Binding PushNewElementCommand}">添加表格</Button>
             
         </StackPanel>
-
-        <Popup x:Name="DataGridDragDrop"
-               AllowsTransparency="True"
-               IsHitTestVisible="False"
-               Placement="RelativePoint"
-               PlacementTarget="{Binding ElementName=MainDataGrid}">
-            <ContentPresenter x:Name="DataGridDragDropContent"/>
-        </Popup>
 
         <DataGrid x:Name="MainDataGrid"
                   Grid.Row="1"
@@ -87,44 +51,17 @@
                   HeadersVisibility="All"
                   SelectionMode="Single"
                   SelectionUnit="CellOrRowHeader"
-                  RowHeaderWidth="30"
-                  behavior:DataGridDragDropRowBehavior.Enabled="True"
-                  behavior:DataGridDragDropRowBehavior.PopupControl="{Binding ElementName=DataGridDragDrop}">
-            <DataGrid.Resources>
-                <Style TargetType="TextBlock">
-                    <Setter Property="VerticalAlignment" Value="Center"/>
-                </Style>
-            </DataGrid.Resources>
+                  RowHeaderWidth="30">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="变量名" Width="120" Binding="{Binding VariableName}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="VerticalAlignment" Value="Center"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="标题" Width="150" Binding="{Binding Title}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="VerticalAlignment" Value="Center"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="Base描述" Width="100" Binding="{Binding BaseText}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="VerticalAlignment" Value="Center"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="追加标签" Width="100" Binding="{Binding TableAppendLabel}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="VerticalAlignment" Value="Center"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTemplateColumn Header="表格类型" Width="80">
+                <DataGridTextColumn Header="变量名" Width="120" Binding="{Binding VariableName}"/>
+                <DataGridTextColumn Header="标题" Width="150" Binding="{Binding Title}"/>
+                <DataGridTextColumn Header="Base描述" Width="100" Binding="{Binding BaseText}"/>
+                <DataGridTextColumn Header="追加标签" Width="100" Binding="{Binding TableAppendLabel}"/>
+                <DataGridComboBoxColumn Header="表格类型" 
+                                        Width="110"
+                                        ItemsSource="{x:Static viewmodel:TableSettingElementViewModel.TableTypeSelections}"
+                                        SelectedItemBinding="{Binding TableTypeSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <!--<DataGridTemplateColumn Header="表格类型" Width="110">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <ComboBox VerticalAlignment="Stretch"
@@ -135,9 +72,9 @@
                                       VerticalContentAlignment="Center"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridCheckBoxColumn Header="追加轴表达式" Binding="{Binding AddAdditionalAxis, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                <DataGridTemplateColumn Header="轴表达式" Width="70">
+                </DataGridTemplateColumn>-->
+                <DataGridCheckBoxColumn Header="追加轴" Width="80" Binding="{Binding AddAdditionalAxis, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <DataGridTemplateColumn Header="轴表达式" Width="100">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button IsEnabled="{Binding IsAxisSettingButtonEnabled}"
@@ -149,8 +86,8 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridCheckBoxColumn Header="新建变量" Width="75" Binding="{Binding AddNewVariable, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                <DataGridTemplateColumn Header="配置变量" Width="75">
+                <DataGridCheckBoxColumn Header="新建变量" Width="90" Binding="{Binding AddNewVariable, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <DataGridTemplateColumn Header="配置变量" Width="100">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button Background="{Binding Path=Background, RelativeSource={RelativeSource AncestorType=DataGridCell}}"
